--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
             <section>
                 <h1>Quarterly Earnings Report</h1>
                 <h3>Q4 2024 Financial Analysis</h3>
+                <p>Presented by: 24f1002416@ds.study.iitm.ac.in</p>
                 <p>
-                    <small>Presented by: <a href="mailto:24f1002416@ds.study.iitm.ac.in">24f1002416@ds.study.iitm.ac.in</a></small>
+                    Email: <a href="mailto:24f1002416@ds.study.iitm.ac.in">24f1002416@ds.study.iitm.ac.in</a>
                 </p>
                 <aside class="notes">
                     Welcome everyone to our Q4 2024 quarterly earnings presentation.
@@ -173,8 +174,9 @@ console.log(`Portfolio Risk: ${(risk * 100).toFixed(2)}%`);
             <section>
                 <h1>Thank You</h1>
                 <h3>Questions & Discussion</h3>
+                <p>Contact: 24f1002416@ds.study.iitm.ac.in</p>
                 <p>
-                    Contact: <a href="mailto:24f1002416@ds.study.iitm.ac.in">24f1002416@ds.study.iitm.ac.in</a>
+                    Email: <a href="mailto:24f1002416@ds.study.iitm.ac.in">24f1002416@ds.study.iitm.ac.in</a>
                 </p>
                 <aside class="notes">
                     Open the floor for questions.
